orchestrator-run-20260606-115712.log
=== Orchestrator run log (20260606-115712) ===

--- stdout ---


--- stderr ---
Compiling knot v0.1.0 (/home/hayden/workspace/ai/knot)
error[E0609]: no field `source_dir` on type `&LoomSummary`
   --> tests/skill_integration.rs:403:20
    |
403 |     assert_eq!(new.source_dir, PathBuf::from("./rig/src/new"));
    |                    ^^^^^^^^^^ unknown field
    |
    = note: available fields are: `id`, `knot_count`

error[E0609]: no field `tie_off_dir` on type `&LoomSummary`
   --> tests/skill_integration.rs:404:20
    |
404 |     assert_eq!(new.tie_off_dir, PathBuf::from("./rig/output/new"));
    |                    ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `id`, `knot_count`

For more information about this error, try `rustc --explain E0609`.
error: could not compile `knot` (test "skill_integration") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
